--- a/MetodoKeeler.ipynb
+++ b/MetodoKeeler.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MetodoKeeler.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO09aXjMnK2MEYZqFmpMG56",
+      "authorship_tag": "ABX9TyMJDjsoaSnrN8XFRorzDHYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,44 +31,39 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 528
+          "base_uri": "https://localhost:8080/"
         },
         "id": "SFnqfJP6hSaL",
-        "outputId": "14b642ec-8626-4fe9-9d63-25d202469be7"
+        "outputId": "1b37cb8b-8a59-48f6-cc1d-2e5cfbbfde6e"
       },
       "source": [
         "from sympy.combinatorics import Permutation\n",
         "from sympy.interactive import init_printing\n",
         "init_printing(perm_cyclic=False, pretty_print=False)\n",
         "\n",
-        "def to_cycles(perm):\n",
+        "def disjuntos(perm):\n",
         "    pi = {i+1: perm[i] for i in range(len(perm))}\n",
-        "    cycles = []\n",
-        "\n",
+        "    ciclos = []\n",
         "    while pi:\n",
         "        elem0 = next(iter(pi)) # arbitrary starting element\n",
-        "        this_elem = pi[elem0]\n",
-        "        next_item = pi[this_elem]\n",
-        "\n",
-        "        cycle = []\n",
+        "        este_elem = pi[elem0]\n",
+        "        sig_item = pi[este_elem]\n",
+        "        ciclo = []\n",
         "        while True:\n",
-        "            cycle.append(this_elem)\n",
-        "            del pi[this_elem]\n",
-        "            this_elem = next_item\n",
-        "            if next_item in pi:\n",
-        "                next_item = pi[next_item]\n",
+        "            ciclo.append(este_elem)\n",
+        "            del pi[este_elem]\n",
+        "            este_elem = sig_item\n",
+        "            if sig_item in pi:\n",
+        "                sig_item = pi[sig_item]\n",
         "            else:\n",
         "                break\n",
-        "\n",
-        "        cycles.append(cycle)\n",
-        "\n",
-        "    return cycles\n",
+        "        ciclos.append(ciclo)\n",
+        "    return ciclos\n",
         "\n",
         "def Metodo_Keeler(P):\n",
         "  alpha,beta = max(P)+1, max(P)+2\n",
         "  nuevos = Permutation(alpha,beta)\n",
-        "  Intercambio = to_cycles(P)\n",
+        "  Intercambio = disjuntos(P)\n",
         "  l = 0\n",
         "  while l < len(Intercambio):\n",
         "    if len(Intercambio[l]) == 1:\n",
@@ -94,7 +89,7 @@
         "  for ciclos in sigmas:\n",
         "    ciclos.reverse()\n",
         "    nuevos_sigmas.append(Permutation(ciclos))\n",
-        "  print(nuevos_sigmas)\n",
+        "  print(\"Sigmas construidos: \",nuevos_sigmas)\n",
         "  tau = 1\n",
         "  for sigma_j in reversed(nuevos_sigmas):\n",
         "    tau = tau*sigma_j\n",
@@ -103,47 +98,30 @@
         "    sigma_final = tau\n",
         "  else:\n",
         "    sigma_final = nuevos*tau\n",
+        "  print(\"Sigma final: \",sigma_final)\n",
         "   \n",
-        "  print(sigma_final*permutacion)\n",
+        "  print(\"sigma*P\",sigma_final*permutacion)\n",
         "\n",
+        "#---------------------------------------------------------------\n",
+        "# Ejemplo de permutación\n",
         "\n",
-        "\n",
-        "#P = [13,2,15,14,10,6,12,3,4,1,7,9,5,11,8]\n",
         "P = [13,18,10,15,19,6,4,14,1,12,9,2,5,20,11,7,17,8,16,3]\n",
-        "#P = [4,5,1,3,2]\n",
-        "#P = [1,2,4,3]\n",
         "\n",
-        "#print(\"Descomposición en ciclos disjuntos de P: \",to_cycles(P))\n",
-        "\n",
-        "#P = input(\"Ingrese permutacion\")\n",
-        "\n",
-        "\n",
-        "Metodo_Keeler(P)\n"
+        "print(\"Descomposición en ciclos disjuntos de P: \",disjuntos(P))\n",
+        "Metodo_Keeler(P)"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    582\u001b[0m         \"\"\"\n\u001b[0;32m--> 583\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    584\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-95c75d382163>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;31m#print(\"Descomposición en ciclos disjuntos de P: \",to_cycles(P))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m \u001b[0mP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Ingrese permutacion\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0mMetodo_Keeler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
+          "output_type": "stream",
+          "text": [
+            "Descomposición en ciclos disjuntos de P:  [[13, 5, 19, 16, 7, 4, 15, 11, 9, 1], [18, 8, 14, 20, 3, 10, 12, 2], [6], [17]]\n",
+            "Sigmas construidos:  [Permutation(1, 9, 11, 15, 4, 7, 16, 19, 5, 13)(21, 22), Permutation(2, 12, 10, 3, 20, 14, 8, 18)(21, 22)]\n",
+            "tau:  (22)(1 9 11 15 4 7 16 19 5 13)(2 12 10 3 20 14 8 18)\n",
+            "Sigma final:  (22)(1 9 11 15 4 7 16 19 5 13)(2 12 10 3 20 14 8 18)\n",
+            "sigma*P (22)\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
