--- a/MetodoKeeler.ipynb
+++ b/MetodoKeeler.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MetodoKeeler.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJDjsoaSnrN8XFRorzDHYI",
+      "authorship_tag": "ABX9TyMshFBqRbZoWUxa3t986KIw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "    pi = {i+1: perm[i] for i in range(len(perm))}\n",
         "    ciclos = []\n",
         "    while pi:\n",
-        "        elem0 = next(iter(pi)) # arbitrary starting element\n",
+        "        elem0 = next(iter(pi))\n",
         "        este_elem = pi[elem0]\n",
         "        sig_item = pi[este_elem]\n",
         "        ciclo = []\n",
